2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-articles-to-read): Change wording in prompt to be
	slightly clearer.

2011-11-03  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-send-and-exit): Document `arg'.

2011-11-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el (nnimap-open-connection-1): Use tcp-keealive if possible.

2011-11-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Another comment to explain why
	we don't use `bound-and-true-p'.

2011-11-01  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Remove.
	(gnus-bound-and-true-dumber-p): Rename to `gnus-bound-and-true-p'.
	* nnir.el: Use it.
	* nnmairix.el: Use it.

2011-10-31  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-dumber-p): Define new, slower, dumb
	function because `gnus-bound-and-true-p' doesn't work well in XEmacs
	for reasons unknown.
	* nnir.el: Use it.
	* nnmairix.el: Use it.

	* nnregistry.el: Remove unnecessary `gnus-registry-enabled' defvar.
	* nnir.el: Ditto.
	* nnmairix.el: Ditto.

	* gnus-registry.el (gnus-registry-enabled): Default to nil.

2011-10-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-completion-function): Make sure
	message-tab-body-function is not attempted if one of
	message-completion-alist fails to find a completion (bug#9158).

2011-10-26  Daiki Ueno  <ueno@unixuser.org>

	* mml.el (mml-quote-region): Quote <#secure> tag.
	(mml-generate-mime-1): Unquote <#secure> tag.

2011-10-20  Chong Yidong  <cyd@gnu.org>

	* gnus-cite.el (gnus-message-citation-mode): Doc fix (in Emacs 24,
	calling a minor mode from Lisp with nil arg enables it, so we have to
	make the wording a bit ambiguous here).

2011-10-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-bound-and-true-p): Macro for XEmacs compatibility.
	* nnir.el (nnir-mode): Use it.